# GameTran

./: README.md  index.html  package-lock.json  package.json  settings.html
dev/screenshots/: config.txt
src/: App.css  App.tsx  common.css  main.tsx  ocr.ts  settings.ts  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: lib.rs  main.rs  ocr.rs  process.rs  screenshot.rs
