[package]
name = "gametran"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gametran_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-log = "2.2.3"
log = "0.4.26"
tauri-plugin-process = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2.2.0"
scopeguard = "1.2.0"
image = "0.25.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi"
] }
windows-native = "1.0.44"
win-screenshot = "4.0.12"

[features]
mock_process_and_screenshot = []
